src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/style.css
/*THIS CSS will need cleaning*/
/*
Colors
orange:EEB342
*/
body{margin:0;font:16px/1.2em Arial,Verdana,sans-serif;background-color:#000;color:#393939;margin:0;padding:0;}
a img{border:none;}
a{color:#4B8ECB;}
/**
* UTILS
* --------------------
*/
.clear{clear:both;display:block;overflow:hidden;visibility:hidden;width:0;height:0;}
.clearfix:after{clear:both;content:' ';display:block;font-size:0;line-height:0;visibility:hidden;width:0;height:0;}
.clearfix{display:inline-block;}
* html .clearfix{height:1%;}
.clearfix{display:block;}
/**
* LAYOUT
* --------------------
*/
/* ----- Header ----- */
#header{background:#2D2D2D;overflow:hidden;color:#CCC;}
#header a{color:inherit;}
#menu{height:30px;overflow:hidden;padding:0;float:left;}
#header ul,
#header li{margin:0;padding:0;list-style:none;}
#header li{height:30px;line-height:30px;display:block;float:left;border-right:0px solid #616162; }
#header li.first{margin-left:0;}
#header li.last{margin-right:0;border-right:none;}
#header a,
#header span{height:30px;line-height:30px;display:inline;color:#CCC;font:13px/27px Arial,sans-serif;text-decoration:none; padding:0 10px;font-weight:bold;}
#header li:hover{ background: #555;}
#header li.current{color:#fff; background: #EEB342;}
#header li.current a,
#header li.current span{color:inherit;}
#auth {float: right;}

/* ----- Header2 ----- */
#header2{background:#F5F5F5;border-bottom:1px solid #DDD;height:60px;padding:5px 0 10px;}
#header2 .center{position:relative;}
#logo{text-decoration:none;width:169px;margin-top:14px;display:block;float:left;}
#logo img{width:169px;}
#baseline{position:absolute;top:43px;left:61px;color:#999;font-size:9px;font-family:verdana;}
#search-box{height:28px;padding:0;border:none;margin:16px 0 0 20px;width:430px;float:left;}
#search-box label{display:none;}
#search-box input{float:left;border:none;height:25px;width:300px;padding:1px 7px;color:#666;font-size:17px;margin:0;outline:none;border:1px solid #c0c0c0;}
#search-box .button{overflow:hidden;text-indent:-999px;border:none;outline:none;width:70px;margin:0 0 0 15px;background-image:url(../images/magnifier.png);background-image:url(../images/magnifier.png),-webkit-gradient(linear,left top,left bottom,from(#f1b525),to(#e4ad23));/* Saf4+,Chrome */
background-image:url(../images/magnifier.png),-webkit-linear-gradient(top,#f1b525,#e4ad23);/* Chrome 10+,Saf5.1+ */
background-image:url(../images/magnifier.png),-moz-linear-gradient(top,#f1b525,#E8B031);/* FF3.6+ */
background-image:url(../images/magnifier.png),-ms-linear-gradient(top,#f1b525,#E8B031);/* IE10 */
background-image:url(../images/magnifier.png),-o-linear-gradient(top,#f1b525,#E8B031);/* Opera 11.10+ */
background-image:url(../images/magnifier.png),linear-gradient(top,#f1b525,#E8B031);/* W3C */
background-repeat:no-repeat;background-position:center center;}
#search-box button:hover{background-image:url(../images/magnifier.png),-webkit-gradient(linear,left top,left bottom,from(#f1b525),to(#d89d14));/* Saf4+,Chrome */
background-image:url(../images/magnifier.png),-webkit-linear-gradient(top,#f1b525,#d89d14);/* Chrome 10+,Saf5.1+ */
background-image:url(../images/magnifier.png),-moz-linear-gradient(top,#f1b525,#d89d14);/* FF3.6+ */
background-image:url(../images/magnifier.png),-ms-linear-gradient(top,#f1b525,#d89d14);/* IE10 */
background-image:url(../images/magnifier.png),-o-linear-gradient(top,#f1b525,#d89d14);/* Opera 11.10+ */
background-image:url(../images/magnifier.png),linear-gradient(top,#f1b525,#d89d14);/* W3C */}
#promo{float:right;font-size:13px;height:60px;position:relative;}
#promo a.img{position:absolute;bottom:3px;height:56px;}
#promo .bulle{background:#fff;margin: 3px 0 0 100px;padding:8px 10px;border-radius:4px;-moz-border-radius:4px;-webkit-border-radius:4px;color:#000;border:1px solid silver;}
#promo .bulle a{font-weight:bold;text-decoration:underline;}
#promo a:hover{color:#EDB443;}
.user-list{}
.user-list li{display:inline;}
.user-list li a{font-weight:bold;}
.user-list li.contributor{display:inline;}
.user-list.hide-contributors li.contributor{display:none;}
.user-list .contributor-others-switch{display:none;}
.user-list.hide-contributors .contributor-others-switch{display:inline;}
#content-title .user a{color:#d89d14;font-weight:bold;}
#content-title .contributor a{color:#d89d14;font-weight:normal;}
h1{display:block;padding:20px 20px 20px 0;margin:0;font-size:22px;line-height:22px;color:#393939;}
h1 span{font-size:12px;color:#888;}
#global-gplusone{position:absolute;right:40px;top:16px;}
#global-tip{margin-bottom:10px;margin-top:5px;color:#666;font-size:13px;}
/* ----- Goodies ----- */
#knplabs{position:absolute;top:12px;right:15px;}
#knplabs img{width:45px;}
/* ----- Menu ----- */
/* ----- Content ----- */
.center{width:960px;margin:0 auto;}
#content{margin-top:0;text-align:left;position:relative;background-color:#FFF;padding:20px;border:1px solid #DDD;}
#content{padding:0;border:none;background:transparent;}
#content-wrapper{background-color:#FFF;padding-top:20px;padding-bottom:20px;}
#main{width:100%;margin:0;overflow:hidden;}
#main h2{margin:40px 0 20px;font-size:22px;font-weight:bold;}
#main h3{margin:20px 0;font-size:18px;font-weight:normal;}
#side{float:left;width:275px;margin:5px;}
/* ----- Footer ----- */
#footer-wrapper{margin:0;background:#000 url(../images/footer_bg.png) repeat-x;}
#footer{height:200px;text-align:left;border-top:3px solid #DDD;}
#footer-inner{width:960px;margin:auto;text-align:left;color:#fff;}
#footer a{color:#fff;text-decoration:none;}
#footer a:hover{text-decoration:underline;}
#footer dl{float:left;padding:20px;}
#footer dt{font-size:18px;}
#footer dd{font-size:14px;padding:10px 0;}
#footer dl.right{float:right;text-align:right;}
#footer dl.right a{text-decoration:underline;}
/**
* SHARED
* -------------------- */
/* ----- Markdown ----- */
.markdown{overflow:hidden;}
.markdown a{color:#4183C4;}
.markdown ul{margin:0;padding:0;}
.markdown ul li{list-style:disc inside;}
.markdown p{margin:10px 0;}
/* ... */

